<resources>
    <string name="app_name">Journey Memory</string>
    <string name="start_diary">開始旅程</string>
    <string name="edit_diary">旅程回憶</string>
    <string name="app_title">Diary</string>
    <string name="app_subtitle">旅遊日誌</string>
    <string name="stdate">開始日期</string>
    <string name="eddate">結束日期</string>
    <string name="diary_hint">請在這裡輸入文字</string>
    <string name="journey_memory">旅行的回憶</string>
    <string name="share">分享</string>
    <string name="title_hint">請輸入您的旅遊標題</string>
</resources>