<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_subtitle"
            android:textSize="50sp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinners"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:background="@drawable/border_spinner" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_stdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>

                <Button
                    android:id="@+id/button_stdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stdate"
                    android:textSize="18sp"
                 />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_eddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>

                <Button
                    android:id="@+id/button_eddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eddate"
                    android:textSize="18sp"
                    />

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/button_start"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/start_diary"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="26sp"
            />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_diary"
            android:textStyle="bold"
            android:textSize="26sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>